src/test/deca/context/invalid/created/object/equals_float_int.deca
// Description :
//    test equals entre un float et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
float a;
int b;
int c = a.equal(b);
}
